// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transfer feed item renders correctly for <0.000001 network fee 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/coins-logo.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemNetworkFeeTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          -
          $
          &lt;0.001
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        feedItemNetworkFeeInfo
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for faucet 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/coins-logo.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemFaucetTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#2E3338",
              },
            ]
          }
        >
          
          $
          133.00
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        feedItemFaucetInfo
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for known received 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#7AD6FE",
                "borderRadius": 20,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          John Doe
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#2E3338",
              },
            ]
          }
        >
          
          $
          133.00
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            false,
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for known sent 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#7AD6FE",
                "borderRadius": 20,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          John Doe
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          -
          $
          133.00
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            false,
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for network fee 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/coins-logo.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemNetworkFeeTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          -
          $
          0.003
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        feedItemNetworkFeeInfo
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for received 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#7AD6FE",
                "borderRadius": 20,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemReceivedTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#2E3338",
              },
            ]
          }
        >
          
          $
          133.00
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            false,
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for received invite 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/coins-logo.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemInviteReceivedTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#2E3338",
              },
            ]
          }
        >
          
          $
          1.33
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        feedItemInviteReceivedInfo
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for received with encrypted comment 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#7AD6FE",
                "borderRadius": 20,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemReceivedTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#2E3338",
              },
            ]
          }
        >
          
          $
          133.00
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        Rent request for June, it is already late!!!
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for sent 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#7AD6FE",
                "borderRadius": 20,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemSentTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          -
          $
          133.00
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            false,
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for sent invite 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/coins-logo.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemInviteSentTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          -
          $
          1.33
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        feedItemInviteSentInfo
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for sent transaction 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#7AD6FE",
                "borderRadius": 20,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemSentTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          -
          $
          1.33
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        Rent request for June, it is already late!!!
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for sent with encrypted comment 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#FEB45E",
                "borderRadius": 20,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/unknown-user-icon.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemSentTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          -
          $
          1.33
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        Rent request for June, it is already late!!!
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for verification fee 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/coins-logo.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemVerificationFeeTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#81868B",
              },
            ]
          }
        >
          -
          $
          0.43
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        feedItemVerificationFeeInfo
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`transfer feed item renders correctly for verification reward 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <svg
          fill="black"
          height={38}
          style={Object {}}
          viewBox="0 0 23 28"
          width={46.26086956521739}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.61263 12.7968C3.99857 12.1184 4.48516 11.4823 5.07212 10.9103C8.43361 7.63468 13.8141 7.7043 17.0897 11.0658C17.6079 11.5977 18.0425 12.1801 18.3935 12.7967C18.7172 11.4573 18.6731 10.0461 18.2592 8.72446C14.1272 5.09223 7.90165 5.07436 3.74717 8.72475C3.33404 10.0444 3.2885 11.4556 3.61263 12.7968ZM19.4333 9.92482C19.6073 11.2934 19.4483 12.6953 18.9579 13.9998C19.4494 15.3065 19.6072 16.7088 19.4331 18.076C20.4598 16.8553 21.18 15.4622 21.5924 13.9995C21.1807 12.5399 20.4614 11.1477 19.4333 9.92482ZM0.413856 14.0005C0.82624 12.5379 1.54647 11.1448 2.57321 9.92401C2.39907 11.2913 2.55692 12.6936 3.04843 14.0002C2.55799 15.3047 2.39894 16.7067 2.57295 18.0752C1.54487 16.8523 0.825613 15.4602 0.413856 14.0005ZM2.97191 19.7819C2.80519 19.6291 2.64181 19.4707 2.48201 19.3067C1.43628 18.2335 0.634086 17.0134 0.0745299 15.7148C-0.296385 18.8931 0.715458 22.2056 3.12269 24.6759C7.36375 29.0282 14.33 29.1183 18.6823 24.8773C21.226 22.3985 22.3138 18.9889 21.9319 15.7143C21.3333 17.1043 20.4578 18.4025 19.3066 19.5244C19.2168 19.6118 19.126 19.6976 19.0343 19.7816C18.6153 20.9931 17.9148 22.1278 16.9342 23.0833C13.5727 26.359 8.19223 26.2893 4.91661 22.9278C4.0157 22.0033 3.36783 20.9261 2.97191 19.7819Z"
            fill="#B9EEC2"
            fill-rule="evenodd"
            style={Object {}}
          />
          <path
            clip-rule="evenodd"
            d="M11.0034 19.5016C15.6969 19.5016 19.5018 15.6967 19.5018 11.0032C19.5018 6.30966 15.6969 2.50479 11.0034 2.50479C6.30984 2.50479 2.50498 6.30966 2.50498 11.0032C2.50498 15.6967 6.30984 19.5016 11.0034 19.5016ZM22.0066 11.0032C22.0066 17.0801 17.0803 22.0064 11.0034 22.0064C4.92648 22.0064 0.000183105 17.0801 0.000183105 11.0032C0.000183105 4.9263 4.92648 0 11.0034 0C17.0803 0 22.0066 4.9263 22.0066 11.0032Z"
            fill="#45CD85"
            fill-rule="evenodd"
            style={Object {}}
          />
        </svg>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": -1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-SemiBold",
              "fontSize": 15,
            }
          }
        >
          feedItemVerificationRewardTitle
        </Text>
        <Text
          numberOfLines={1}
          style={
            Array [
              Array [
                Object {
                  "marginLeft": "auto",
                  "paddingLeft": 10,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ],
              Object {
                "color": "#2E3338",
              },
            ]
          }
        >
          
          $
          1.33
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-Regular",
            "fontSize": 15,
            "marginTop": -2,
          }
        }
      >
        feedItemVerificationRewardInfo
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#BDBDBD",
              "fontFamily": "Hind-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
        >
          Jan 1 global:at 12:00 AM
        </Text>
      </View>
    </View>
  </View>
</View>
`;
